@@ -10,6 +10,8 @@ configure
 reconf
 genac
 
+doc/embed
+doc/pty-fd
 doc/etc/rxvt-unicode.terminfo
 doc/etc/rxvt-unicode.termcap
 doc/menu/example.menu
