@@ -370,11 +370,11 @@ B<secondaryScreen>.
 Turn on/off secondary screen scroll (default enabled); resource
 B<secondaryScroll>.
 
-=item B<-keysym.>I<sym>: I<string>
+=item B<-keysym.>I<sym> I<string>
 
 Remap a key symbol. See resource B<keysym>.
 
-=item B<-embed>: I<windowid>
+=item B<-embed> I<windowid>
 
 Tells @@RXVT_NAME@@ to embed it's windows into an already-existing window,
 which enables applications to easily embed a terminal.
@@ -391,6 +391,42 @@ descriptors passed to it (except for stdin/out/err, of course), so you
 can use file descriptors to communicate with the programs within the
 terminal. This works regardless of wether the C<-embed> option was used or
 not.
+
+Here is a short Gtk2-perl snippet that illustrates how this option can be
+used (a longer example is in F<doc/embed>):
+
+   my $rxvt = new Gtk2::DrawingArea;
+   $...->add ($rxvt); # important to add it somewhere first
+   $rxvt->realize; # now it can be realized
+   my $xid = $rxvt->window->get_xid;
+
+   system "@@RXVT_NAME@@ -embed $xid &";
+
+=item B<-pty-fd> I<fileno>
+
+Tells @@RXVT_NAME@@ NOT to execute any commands or create a new pty/tty
+pair but instead use the given filehandle as the tty master. This is
+useful if you want to drive @@RXVT_NAME@@ as a generic terminal emulator
+without having to run a program within it.
+
+If this switch is given, @@RXVT_NAME@@ will not create any utmp/wtmp
+entries and will not tinker with pty/tty permissions - you have to do that
+yourself if you want that.
+
+Here is a example in perl that illustrates how this option can be used (a
+longer example is in F<doc/pty-fd>):
+
+   use IO::Pty;
+   use Fcntl;
+
+   my $pty = new IO::Pty;
+   fcntl $pty, F_SETFD, 0; # clear close-on-exec
+
+   system "@@RXVT_NAME@@ -pty-fd " . (fileno $pty) . "&";
+
+   # now communicate with rxvt
+   my $slave = $pty->slave;
+   while (<$slave>) { print $slave "got <$_>\n" }
 
 =back
 
